--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "zustand": "^4.4.6"
   },
   "devDependencies": {
+    "@types/node": "^20.9.1",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
